bad/assign_field_bool_arr_elem_void.example_compiler_output
ERROR
[1mbad/assign_field_bool_arr_elem_void.lat:8:20: [1;31merror: [0;1massigning to `boolean` from incompatible type `void`[m
	(new C[1])[2].fld = vfunc();
	                  [1;32m^[m
